unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/Snapshot_Catalyst_Circle__c.object-meta.xml
<CustomObject>
    <description>Table used for analytical historical reporting on Catalyst Circle</description>
    <label>Snapshot Catalyst Circle</label>
    <nameField>
        <displayFormat>CCSS {00000}</displayFormat>
        <label>Snapshot Catalyst Circle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Snapshot Catalyst Circle</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>