unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_ID__c</fullName>
    <label>Account ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>