unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <label>Account Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>