unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/Account_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_ID__c</fullName>
    <label>Account Record ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>