unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/HPC_Date__c.field-meta.xml
<CustomField>
    <fullName>HPC_Date__c</fullName>
    <label>HPC Date</label>
    <type>Date</type>
</CustomField>