unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/MRC_Amount__c.field-meta.xml
<CustomField>
    <fullName>MRC_Amount__c</fullName>
    <label>MRC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>