unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/Secondary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Contact__c</fullName>
    <label>Secondary Contact</label>
    <length>150</length>
    <type>Text</type>
</CustomField>