unpackaged/main/default/objects/Snapshot_Catalyst_Circle__c/fields/Total_Amount_Committed_Current_FY__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Committed_Current_FY__c</fullName>
    <label>Total Amount Committed Current FY</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>